Fix tooltip visibility for logout icon

--- a/frontend/src/components/user/Sidebar/UserSidebar.css
+++ b/frontend/src/components/user/Sidebar/UserSidebar.css
@@ -84,6 +84,10 @@
   max-width: 200px;
 }
 
+.special-tooltip{
+    top: 50%;
+}
+
 div.relative:hover .tooltip {
   opacity: 1;
   visibility: visible;
